--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div id="main-container">
+        <div id="header"></div>
+        <div id="content">
+            <div id="player-display-container">
+                <div id="player-one-display" class="player-display"></div>
+                <div id="player-two-display" class="player-display"></div>
+            </div>
+            <div id="game-grid">
+                <p>uyhuyuyuyuyuy</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
