Removed unnecessary line

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
                 <div id="player-one-display" class="player-display"></div>
                 <div id="player-two-display" class="player-display"></div>
             </div>
-            <div id="game-grid">
-                <p>uyhuyuyuyuyuy</p>
-            </div>
+            <div id="game-grid"></div>
         </div>
     </div>
 </body>
