--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
 </head>
 <body>
     <div id="main-container">
-        <div id="header"></div>
         <div id="content">
             <div id="player-display-container">
-                <div id="player-one-display" class="player-display"></div>
-                <div id="player-two-display" class="player-display"></div>
+                <div id="player-one-display" class="player-display">
+                    <i class="fa-solid fa-xmark" icon="playerOne"></i>
+                </div>
+                <div id="player-two-display" class="player-display">
+                    <i class="fa-regular fa-circle" icon="playerTwo"></i>
+                </div>
             </div>
             <div id="game-grid"></div>
         </div>
+        <dialog id="game-summary">
+            <div id="summary-contents">
+                <h2 id="winner-display"></h2>
+                <button id="play-again-button">Play Again</button>
+            </div>
+        </dialog>
     </div>
 </body>
 </html>
