Changed positioning of player display

--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
             <div id="player-display-container">
                 <div id="player-one-display" class="player-display">
                     <i class="fa-solid fa-xmark" icon="playerOne"></i>
+                    <div id="player-one-indicator" class="player-indicator"></div>
                 </div>
                 <div id="player-two-display" class="player-display">
                     <i class="fa-regular fa-circle" icon="playerTwo"></i>
+                    <div id="player-two-indicator" class="player-indicator"></div>
                 </div>
             </div>
             <div id="game-grid"></div>
         </div>
         <dialog id="game-summary">
             <div id="summary-contents">
-                <h2 id="winner-display"></h2>
+                <h1 id="winner-display"></h1>
                 <button id="play-again-button">Play Again</button>
             </div>
         </dialog>
