Modified play-again-button to no longer be autofocused

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <dialog id="game-summary">
             <div id="summary-contents">
                 <h1 id="winner-display"></h1>
-                <button id="play-again-button">Play Again</button>
+                <button id="play-again-button" autofocus="false">Play Again</button>
             </div>
         </dialog>
     </div>
